# ai-interviewer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_Interview_Tool_機能要件定義書.docx  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
apps/backend/: Dockerfile  alembic.ini  pyproject.toml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 20240101_000000_001_initial_schema.py  20260216_000000_002_add_pgvector.py
apps/backend/src/grc_backend/: __init__.py  config.py  main.py
apps/backend/src/grc_backend/api/: deps.py
apps/backend/src/grc_backend/api/routes/: auth.py  demo.py  health.py  interviews.py  knowledge.py  models.py  notifications.py  portal.py  projects.py  reports.py  sharing.py  tasks.py  templates.py
apps/backend/src/grc_backend/api/websocket/: interview_ws.py
apps/backend/src/grc_backend/core/: __init__.py  errors.py  logging.py  notifications.py  security.py  telemetry.py
apps/backend/src/grc_backend/demo/: __init__.py  __main__.py  cli.py  data.py  seeder.py
apps/backend/src/grc_backend/services/: audit_service.py  knowledge_service.py  report_generator.py  sso_service.py  synthesis_service.py  transcription_service.py
apps/backend/tests/: __init__.py  conftest.py  test_audit_service.py  test_auth.py  test_auth_endpoints.py  test_demo_seeder.py  test_enterprise_wiring.py  test_errors.py  test_export.py  test_health_route.py  test_interview_state_machine.py  test_models_api.py  test_projects_routes.py  test_rbac.py  test_report_generator.py  test_schema_aliasing.py  test_security.py  test_services.py  test_sso_service.py  test_synthesis_service.py  test_tasks_routes.py  test_templates_routes.py  test_transcription_service.py  test_websocket_auth.py  test_websocket_connection.py
apps/backend/tests/integration/: conftest.py  test_ai_providers.py  test_api_integration.py  test_cloud_connection.py  test_ollama_integration.py
apps/mobile/: app.json  eslint.config.mjs  package.json
apps/mobile/src/app/: _layout.tsx
apps/mobile/src/app/(tabs)/: _layout.tsx  index.tsx  interviews.tsx  settings.tsx  tasks.tsx
apps/mobile/src/app/interview/: [id].tsx
apps/mobile/src/lib/: api.ts
apps/web/: Dockerfile  jest.config.js  next.config.js  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
apps/web/e2e/: auth.spec.ts  fixtures.ts  navigation.spec.ts  projects.spec.ts  settings.spec.ts  tasks.spec.ts  templates.spec.ts  toast.spec.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/register/: page.tsx
apps/web/src/app/(dashboard)/: error.tsx  layout.tsx
apps/web/src/app/(dashboard)/dashboard/: page.tsx
apps/web/src/app/(dashboard)/knowledge/: page.tsx
apps/web/src/app/(dashboard)/projects/: page.tsx
apps/web/src/app/(dashboard)/reports/: page.tsx
apps/web/src/app/(dashboard)/settings/: page.tsx
apps/web/src/app/(dashboard)/tasks/: page.tsx
apps/web/src/app/(dashboard)/templates/: page.tsx
apps/web/src/app/interviews/[id]/: page.tsx  (+1 more)
apps/web/src/components/: LanguageSelector.tsx  NotificationBell.tsx  VoiceInput.tsx  theme-toggle.tsx
apps/web/src/components/__tests__/: ThemeToggle.test.tsx
apps/web/src/components/ui/: badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  confirm-dialog.tsx  empty-state.tsx  index.ts  input.tsx  modal.tsx  select.tsx  skeleton.tsx  toast.tsx  tooltip.tsx
apps/web/src/hooks/: index.ts  useAudioPlayer.ts  useAudioRecorder.ts
apps/web/src/lib/: api-client.ts  auth.ts  constants.ts  i18n.tsx  logger.ts  websocket.ts
apps/web/src/lib/__tests__/: api-client.test.ts  auth.test.ts  cn.test.ts  constants.test.ts  websocket.test.ts
apps/web/src/locales/: en.json  ja.json  zh.json
docs/: ARCHITECTURE.md  README.md
docs/guides/: DEMO.md  DEPLOYMENT.md  DEVELOPMENT.md  PRODUCTION_CHECKLIST.md  RESOURCE_ESTIMATION.md  SETUP.md  TROUBLESHOOTING.md
docs/manuals/: MAINTENANCE_MANUAL.md  OPERATION_MANUAL.md  USER_MANUAL.md
docs/specifications/: AI_PROVIDERS.md  ERROR_HANDLING.md  INFRASTRUCTURE.md  LOGGING.md  README.md  SECURITY.md
infrastructure/db/init/: 01_extensions.sql
infrastructure/terraform/: .terraform.lock.hcl  main.tf
infrastructure/terraform/modules/aws/: main.tf
infrastructure/terraform/modules/azure/: main.tf
infrastructure/terraform/modules/gcp/: main.tf
scripts/: deploy-azure-demo.ps1  deploy-azure-demo.sh  export_openapi.py  setup-container-apps.ps1
(+23 files in other folders)
